...
                <viewController storyboardIdentifier="WebViewViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="iIs-qD-MrB" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="YDR-wE-CF6">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="k5t-il-BQs"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                    </view>
                    <navigationItem key="navigationItem" id="4iy-5z-slH"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="osn-tX-Yn3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8pq-ih-Z3r">
                                                    <rect key="frame" x="336" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeActive"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="Ym5-Tj-uuP" eventType="touchUpInside" id="yfI-Gj-mx4"/>
                                                    </connections>
                                                </button>
...
                                <connections>
                                    <outlet property="delegate" destination="uER-dw-bbP" id="9zr-fz-o9t"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CZe-em-Gfb">
                                <rect key="frame" x="8" y="8" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="NavBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="aos-2G-dn2"/>
                                    <constraint firstAttribute="width" constant="44" id="tTe-ot-EPb"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward_batton"/>
...
