...
        )
        button.setTitle("Войти", for: button.state)
        button.setTitleColor(.castomBlack, for: button.state)
        button.backgroundColor = .white
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
        button.accessibilityIdentifier = "Authenticate"
        
        return button
    }()
    
    private let tokenStorage = OAuth2TokenStorage()
    weak var delegate: AuthViewControllerDelegate?
...
